test/SemanticAnalysis/LifetimeMethods/ThrowingIsLive.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

exception TestError();

class TestClass() {
	// CHECK: .loci:9:2: error: lifetime method '::TestClass::__islive' isn't marked 'noexcept'
	// CHECK: .loci:9:2: error: function '::TestClass::__islive' is declared as 'noexcept' but can throw
	bool __islive() const {
		throw TestError();
	}
}

// CHECK: 2 errors generated.
